fixed spacing on map index

--- a/app/assets/stylesheets/api/business_index.scss
+++ b/app/assets/stylesheets/api/business_index.scss
@@ -98,8 +98,8 @@
 }
 
 .maps-container {
-  width: 45%;
-  height: 90%;
+  width: 50%;
+  height: 83vh;
   z-index: 3;
   position: fixed;
   right: 0;
@@ -107,8 +107,6 @@
 
 .business-index {
   display: flex;
-  margin-left: 150px;
-  // justify-content: flex-start;
 }
 
 .info-window-photo {
