--- a/app/assets/stylesheets/homepage/searchbar.scss
+++ b/app/assets/stylesheets/homepage/searchbar.scss
@@ -19,7 +19,7 @@
   display: flex;
   background: white;
   margin-top: 15px;
-  width: 980px;
+  width: 58%;
   height: 45px;
   align-items: center;
   border-radius: 4px;
